fixed signup page that had a white space on the bottom

--- a/frontend/src/ui/SignUp.css
+++ b/frontend/src/ui/SignUp.css
@@ -1,5 +1,6 @@
 .signUpBackground {
     background: url("../img/14-wolf-full.jpg") no-repeat;
+    padding-bottom: 5rem;
 }
 
 .signUpForm {
